--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
+/*
+ * @Author: your name
+ * @Date: 2021-08-30 16:15:34
+ * @LastEditTime: 2021-09-02 23:18:28
+ * @LastEditors: imsixn
+ * @Description: In User Settings Edit
+ * @FilePath: \angel-color\src\index.css
+ */
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body,html,#root{
+  width: 100%;
+  height: 100%;
 }
