--- a/src/components/AngelShower/style.scss
+++ b/src/components/AngelShower/style.scss
@@ -12,7 +12,7 @@
   font-size: 13px;
   // background-color: #f06292;
   &.error{
-    color: rgb(255, 44, 44);
+    color: #ff6b81;
     animation: showError .3s linear 0s 2;
   }
 }
