--- a/src/components/SimpleCalcor/style.scss
+++ b/src/components/SimpleCalcor/style.scss
@@ -1,66 +1,77 @@
 @import '~@/assets/scss/base';
-.simpleCalcCon{
+
+.simpleCalcCon {
   width: $simple-width;
   height: $simple-height;
-  padding: 20px;
+  padding: $container-pad;
   background-color: $bg-light-color;
+  border-radius: $bd-radius;
 }
-.angInputCon{
+
+.angInputCon {
   width: $simple-width;
   position: relative;
   height: $ang-height;
   line-height: $ang-height;
   margin: 3px 0;
 }
-.angInput{
+
+.angInput {
   box-sizing: border-box;
   width: $simple-width;
   height: $ang-height;
   padding: 5px 10px;
   outline: none;
   border: none;
-  box-shadow: 0 0 4px -2px rgba(0,0,0,.4);
-  border-radius: 4px;
+  box-shadow: 0 0 4px -2px $shadow-color;
+  border-radius: $bd-radius;
   font-size: 1.2em;
-  &::placeholder{
+
+  &::placeholder {
     color: #ccc;
   }
-  &:hover{
+
+  &:hover {
     border: none;
   }
 }
-.radioBox{
-  $radio-size:38px;
+
+.radioBox {
+  $radio-size: 38px;
   width: $simple-width;
   height: $radio-size;
   margin: 10px 0;
   padding: 8px 0;
-  box-shadow:  0 0 4px -2px rgba(0,0,0,.6);
-  border-radius: 4px;
+  box-shadow: 0 0 4px -2px rgba(0, 0, 0, .6);
+  border-radius: $bd-radius;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
-  .radioInput{
+
+  .radioInput {
     display: none;
   }
-  .radioInput+label{
+
+  .radioInput+label {
     box-sizing: border-box;
     display: inline-block;
     width: $radio-size;
     height: $radio-size;
     text-align: center;
-    font-size:1.3em;
+    font-size: 1.3em;
     line-height: $radio-size;
-    transition: background-color .3s linear,border-radius .3s ease;
+    transition: background-color .3s linear, border-radius .3s ease;
     border-radius: 3px;
     border: 1px double transparent;
-    &:hover{
+
+    &:hover {
       background-color: #ccc;
       border: 1px double #ccc;
     }
   }
-  .radioInput:checked+label{
+
+  .radioInput:checked+label {
     border-radius: 50%;
     background: #ccc;
   }
