--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2785450 */
-  src: url('iconfont.woff2?t=1630567328562') format('woff2'),
-       url('iconfont.woff?t=1630567328562') format('woff'),
-       url('iconfont.ttf?t=1630567328562') format('truetype');
+  src: url('iconfont.woff2?t=1642735857408') format('woff2'),
+       url('iconfont.woff?t=1642735857408') format('woff'),
+       url('iconfont.ttf?t=1642735857408') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,12 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-qiehuan:before {
+  content: "\e8a8";
+  position: relative;
+  top: 1px;
 }
 
 .icon--hao:before {
