--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -1,5 +1,5 @@
-$bg-dark-color:#333;
-$bg-light-color:#eee;
+$bg-dark-color:#d0d8e0;
+$bg-light-color:#d0d8e0;
 
 $shadow-color:rgba(0, 0, 0, 0.6);
 $ang-height:34px;
@@ -12,3 +12,4 @@ $advanced-height:350px;
 $container-pad:14px;
 
 $bd-radius:4px;
+$box-sha:0 0 4px -2px $shadow-color;
