--- a/src/components/ResultTag/style.scss
+++ b/src/components/ResultTag/style.scss
@@ -6,6 +6,6 @@
   margin: 0 3px;
   border-radius: $bd-radius;
   font-size: 15px;
-  background-color: rgba($color: #e099c2, $alpha: 0.5);
+  background-color: rgba($color: #949aba, $alpha: 0.5);
   font-family: monospace;
 }
