--- a/src/components/AngelShower/style.scss
+++ b/src/components/AngelShower/style.scss
@@ -2,18 +2,62 @@
 
 .angShower{
   box-sizing: border-box;
-  position: absolute;
-  top: 0;
-  right: 10px;
+  font-family: Arial, “Microsoft YaHei”, “微软雅黑”, sans-serif;
+  &.input{
+    position: absolute;
+    top: 0;
+    right: 10px;
+    height: $ang-height;
+    line-height: $ang-height;
+    font-size: 13px;
+  }
+  &.show{
+    display: inline-block;
+    font-size: 14px;
+  }
   padding: 0 6px;
   border-radius: 4px;
-  height: $ang-height;
-  line-height: $ang-height;
-  font-size: 13px;
-  // background-color: #f06292;
+  // background-color: #b4bacc;
   &.error{
     color: #ff6b81;
     animation: showError .3s linear 0s 2;
+  }
+  &>.help{
+    text-decoration: none;
+    display: inline-block;
+    position: relative;
+    margin-left: 8px;
+    width: 16px;
+    height: 16px;
+    line-height: 16px;
+    text-align: center;
+    border-radius: 50%;
+    background-color: #f5f8f7;
+    transition: background-color .1s linear;
+    &:before{
+      content: '仅支持整数';
+      visibility: hidden;
+      position: absolute;
+      top: 0;
+      left: 0;
+      transform: translateX(-40%) translateY(-100%);
+      white-space: nowrap;
+      background-color: #f5f8f7;
+      padding: 5px 5px 6px;
+      border-radius:  10px;
+      transition: opacity .3s linear;
+      font-size: 12px;
+      opacity: 0;
+      box-shadow: 0 0 4px -2px $shadow-color;
+    }
+
+    &:hover{
+      &:before{
+        visibility: visible;
+        opacity: 1;
+      }
+    }
+
   }
 }
 @keyframes showError {
