--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 /*
  * @Author: your name
  * @Date: 2021-08-30 16:15:34
- * @LastEditTime: 2021-09-15 17:47:18
+ * @LastEditTime: 2022-01-21 00:12:41
  * @LastEditors: imsixn
  * @Description: In User Settings Edit
  * @FilePath: \angel-color\src\index.css
@@ -18,6 +18,7 @@ body {
 body,html,#root{
   width: 100%;
   height: 100%;
+  /* background-color: #d0d8e0; */
   background-color: #57606f;
 }
 p{
